Fix - Button type added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </label>
 
       <div class="animatedborder2">
-        <button onclick="calculateLoan()">Calculate</button>
+        <button onclick="calculateLoan()" type="button">Calculate</button>
       </div>
     </div>
 
