--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="iV-1TJadrxQK0fWxP0VmZAOe63-i85G-pgcbNI0SOiM" />
   <title>Loan Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
