Update - meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="language" content="en">
+  <meta name="description" content="Calculate your loan payments and interest rates with ease at www.calculateloan.org. Use our simple, accurate tools to make informed financial decisions.">
+  <meta property="og:title" content="Loan Payment Calculator - CalculateLoan.org">
+  <meta property="og:description" content="Accurate and easy-to-use loan payment calculator tools to help you manage your finances.">
+  <meta property="og:image" content="https://www.calculateloan.org/favicon.ico">
+  <meta property="og:url" content="https://www.calculateloan.org">  
   <meta name="google-site-verification" content="iV-1TJadrxQK0fWxP0VmZAOe63-i85G-pgcbNI0SOiM" />
   <title>Loan Calculator</title>
   <link rel="stylesheet" href="style.css">
