--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:url" content="https://www.calculateloan.org">  
   <meta name="google-site-verification" content="iV-1TJadrxQK0fWxP0VmZAOe63-i85G-pgcbNI0SOiM" />
   <title>Loan Calculator</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
